<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.AddNoteActivity">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="359dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/title_zametki"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_text_desciption"
        android:layout_width="358dp"
        android:layout_height="35dp"
        android:layout_marginTop="76dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_edit_text_text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_title" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="379dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:entries="@array/dau_of_week"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_desciption" />

    <RadioGroup
        android:id="@+id/radio_group_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.05">

        <RadioButton
            android:id="@+id/radioButtonPriority1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:text="@string/priority_1" />

        <RadioButton
            android:id="@+id/radioButtonPrority2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_orange_light"
            android:text="@string/proority_2" />

        <RadioButton
            android:id="@+id/radioButtonPriority3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:checked="true"
            android:text="@string/_3" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:text="@string/add_note_buton_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_priority" />

</androidx.constraintlayout.widget.ConstraintLayout>